fixed empty table cell spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -143,6 +143,10 @@ button.tb-modal-btn.tb-modal-btn-close.btn.btn-default:hover {
 }
 
 .tb {
+    min-height: calc(25vh - 20px);
+}
+
+.tb:not(.tb-status-inactive) {
     cursor: pointer;
 }
 
